[package]
name = "boj-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thirtyfour = "0.35.0"
tokio = { version = "1.44.1", features = ["full"] }
