[package]
name = "boj-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.37", features = ["derive"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thirtyfour = "0.35.0"
tokio = { version = "1.44.1", features = ["full"] }
toml = { version = "0.8.22", features = ["preserve_order"] }
